# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: pyci.yml  setenv.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py
task_manager/templates/: base.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/layouts/: layout.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_remove_user_full_name_user_first_name_user_last_name_and_more.py
