[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
    "gunicorn>=23.0.0",
    "ruff>=0.11.13",
]


[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]